# sdizograph

./: .clang-format  .gitignore  CMakeLists.txt  format.sh
data/: dijkstra.txt  example.txt  mst.txt
src/: args.cc  args.hpp  example.cc  functional.cc  graph.cc  graph.hpp  graphgenerator.cc  graphgenerator.hpp  graphreader.cc  graphreader.hpp  graphtype.hpp  main.cc  mst.hpp  performance.cc  shortestpath.hpp  test.hpp
